--- a/TriggerTree.html
+++ b/TriggerTree.html
@@ -41,7 +41,7 @@ performs a 'find next'.</li>
 <ul>
 <li>To support writing a new trigger after having left the
 zone, the
-context menu provides a 'Copy category name to clipboard'.</li>
+context menu provides a 'Copy category name to clipboard'.</li><li>If the Cateogry contains any active triggers it has a green background.</li>
 </ul>
 <ul>
 <li>If the Category name and triggers can be written to an
@@ -116,7 +116,7 @@ matching spell timer name.<br>
 </ul>
 <ul>
 <li>The <i>Show Encounters</i>
-checkbox&nbsp;will display a list of finished encounters. Selecting
+checkbox&nbsp;will display a list of&nbsp;encounters. Selecting
 an encounter will display
 the log lines for that encounter, similar to ACT's <i>View Logs</i>.
 The
